--- a/LotteryGame/solution/style.css
+++ b/LotteryGame/solution/style.css
@@ -1,14 +1,38 @@
 body{
     margin:0;
     box-sizing: border-box;
+    background-color: aquamarine;
+    
+}
+.image{
+    opacity: 0.5;
+
 }
 .main{
     width: 100%;
-    height: 250px;
+    height: 450px;
     text-align: center;
-    margin-top:18%;
-    background-color: brown ;
+    margin-top: 2rem;
+    
 }
+
 #number{
-    width: 16rem;
+    width: 12rem;
+    opacity: 1;
+}
+#btn{
+    background-color:darkorange;
+    color: white;
+    border-radius: 5px;
+    opacity: 1;
+}
+#btn:hover{
+    box-shadow: inset;
+    cursor:pointer;
+
+}
+p{
+    font-size: 1.2rem;
+    word-spacing: 5px;
+    color: darkgreen;
 }
