--- a/ToDo/style.css
+++ b/ToDo/style.css
@@ -134,6 +134,22 @@ select{
 }
 
 
-@media (screen) {
-    
+@media only screen and (max-width: 700px) {
+    body{
+        background-color: aqua;
+    }
+    html{
+        font-size: 8px;
+    }
+    h1{
+        background: blue;
+    }
+    .filter-todo{
+        width: 50%;
+        height: 30px;
+    }
+    .select::after{
+        padding: 0.2rem;
+        display: none;
+    }
 }
